<resources>
    <string name="app_name">Listi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">guest01</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Paġna Ewlenija</string>
    <string name="menu_statistics">Statistika</string>
    <string name="menu_school_management">Skola</string>
    <string name="menu_lists">Listi</string>
    <string name="menu_accessibility">Għażliet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Kompli</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">JEW</string>
    <string name="kompli_b_microsoft">Kompli b\'Microsoft</string>
    <string name="profil">Profil</string>
    <string name="register">"M'għandekx kont?"</string>
    <string name="isem">Isem</string>
    <string name="oħloq_profil">Oħloq Profil</string>
    <string name="profili">Profili</string>
    <string name="Għajnuna">Keyboard tal-Malti</string>
    <string name="gboard">Gboard</string>
    <string name="importanti_ni_el_keyboard_bil_malti"><b>Importanti!</b> Niżżel keyboard tal-Malti</string>
    <string name="step3">3. Agħżel <b>Gboard</b></string>
    <string name="step5">5. Meta titla\' l-popup <b>Change Keyboard</b>, agħfas fuq <b>Language settings</b></string>
    <string name="step6">6. Agħfas fuq <b>+ Add Keyboard</b></string>
    <string name="step7">7. Fittex u agħżel <b>Maltese (Malta)</b></string>
    <string name="step8">8. Agħfas <b>Done</b></string>
    <string name="step9">9. Erġa\' iftaħ il-keyboard u żomm l-ispacebar</string>
    <string name="step10">10. Agħżel <b>Maltese (Malta)</b></string>
</resources>